--- a/overlayes.css
+++ b/overlayes.css
@@ -3,10 +3,11 @@ position: fixed;
 top: 20%;
 left :40%;
 width: 20%;
-background-color: white;
+background-color: rgb(243, 229, 229);
 padding: 2rem;
 border-radius: 6px;
 box-shadow: 0 2px 8px rgb(0,0,0,0.7);
+display: none;
 
 }
 
@@ -24,4 +25,5 @@ left: 0;
 width: 100%;
 height:100% ;
 background-color: rgb(0, 0, 0,0.6);
+display: none;
 }
